--- a/src/pages/research/universal-traversing-sequence.astro
+++ b/src/pages/research/universal-traversing-sequence.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Istrail Lab | Universal Traversing Sequences">
+<ResearchLayout title="Universal Traversing Sequences">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
